--- a/styles/main.scss
+++ b/styles/main.scss
@@ -4,7 +4,7 @@
 
 // Global
 @import './abstracts/variables';
-
+@import './abstracts//mixins';
 @import './base/base';
 
 @import './base/typography';
