--- a/styles/base/_base.scss
+++ b/styles/base/_base.scss
@@ -6,7 +6,7 @@
 
 html {
 	box-sizing: border-box;
-	font-size: 62.5%; // 1rem = 10px, 10px/16px = 62.5%
+	// font-size: 62.5%; // 1px = 10px, 10px/16px = 62.5%
 
 	// @media only screen and (max-width: $bp-large) {
 	// 	font-size: 50%;
@@ -14,11 +14,15 @@ html {
 }
 
 body {
-	font-size: 1.6rem;
+	width: 100%;
+	overflow: hidden;
 	font-family: 'Calibri', serif !important;
 	font-weight: 400;
 	line-height: 1.6;
 	background-color: $color-grey-light-1;
-
+	// @include resp(lg) {
+	// 	font-size: 90%;
+	// }
+	padding: 0;
 	// direction: rtl;
 }
