--- a/styles/base/_typography.scss
+++ b/styles/base/_typography.scss
@@ -5,11 +5,11 @@
 
 .header-text {
 	text-align: center;
-	margin-bottom: 5rem;
+	margin-bottom: 50px;
 }
 
 .header-title {
-	font-size: 3.5rem;
+	font-size: 35px;
 	font-weight: 700;
 	display: inline-block;
 	transition: all 0.2s;
