--- a/styles/components/_layout.scss
+++ b/styles/components/_layout.scss
@@ -3,15 +3,15 @@
 
 .navbar {
 	background-color: $color-primary;
-	height: 8rem;
-	// padding: 1rem;
+	height: 80px;
+	// padding: 1px;
 
 	.navbar-item {
 		color: $color-grey-light-1;
 
 		& > a {
-			padding: 1rem 0.5rem;
-			margin: 0 1.2rem;
+			padding: 10px 5px;
+			margin: 0 12px;
 
 			&:hover {
 				border-bottom: 2px solid $color-grey-light-1;
@@ -21,11 +21,11 @@
 		}
 
 		& > button {
-			margin: 0 1rem;
-			padding: 2rem 4rem;
+			margin: 0 10px;
+			padding: 20px 40px;
 			color: $color-grey-light-1;
 			background-color: inherit;
-			border-radius: 2rem;
+			border-radius: 20px;
 
 			&:hover {
 				color: $color-grey-light-1;
@@ -50,13 +50,12 @@
 		rgba($color-primary, 1),
 		rgba($color-primary-dark, 1)
 	);
-
 	// &-logo {
 	// 	text-align: center;
 	// }
 
 	// & .section.is-medium {
-	// 	padding: 2rem 4.5rem 9rem;
+	// 	padding: 2px 4.5px 9px;
 	// }
 
 	&-contents {
@@ -68,10 +67,19 @@
 
 	&-navbar {
 		width: 10%;
-
+		@include resp(lg) {
+			width: 18%;
+		}
 		& > li {
+			@include resp(lg) {
+				font-size: 13.5px;
+			}
+			@include resp(xsm) {
+				font-size: 12px;
+			}
+
 			&:not(:last-child) {
-				margin-bottom: 0.5rem;
+				margin-bottom: 5px;
 			}
 
 			& a {
@@ -79,13 +87,13 @@
 				align-items: center;
 
 				& svg {
-					margin-right: 1rem;
+					margin-right: 10px;
 					transition: all 0.2s;
 				}
 
 				&:hover {
 					color: $color-grey-light-1;
-					margin-left: 1.5rem;
+					margin-left: 15px;
 				}
 			}
 		}
@@ -94,24 +102,35 @@
 	&-contact > li {
 		display: flex;
 		align-items: center;
+		@include resp(lg) {
+			font-size: 13.5px;
+		}
 
 		&:not(:last-child) {
-			margin-bottom: 1.5rem;
+			margin-bottom: 15px;
 		}
 
 		& span:last-child {
-			margin-left: 1rem;
-			font-size: 2rem;
+			margin-left: 10px;
+			font-size: 20px;
 		}
 	}
 
 	&-social {
 		display: flex;
-
+		@include resp(xsm) {
+			display: block;
+		}
 		& > li {
-			font-size: 2rem;
-			margin: 0 1rem;
+			font-size: 20px;
+			margin: 0 10px;
 			cursor: pointer;
+			@include resp(md) {
+				margin: 0 8px;
+			}
+			@include resp(xsm) {
+				margin: 17px 0;
+			}
 
 			&:hover {
 				color: $color-grey-light-3;
@@ -124,23 +143,38 @@
 	color: $color-black;
 	display: flex;
 	justify-content: center;
-	padding: 2rem;
+	padding: 20px;
 	background-color: $color-grey-light-4;
-	font-size: 1.8rem;
+	font-size: 18px;
 	font-weight: 5;
-
+	@include resp(lg) {
+		font-size: 18px;
+	}
+	@include resp(md) {
+		font-size: 16px;
+	}
+	@include resp(sm) {
+		font-size: 13px;
+	}
+	@include resp(xsm) {
+		font-size: 12.5px;
+		text-align: center;
+	}
 	& svg {
-		margin: 0.5rem;
+		margin: 5px;
 	}
 
 	& span:last-child {
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		margin-left: 1rem;
+		margin-left: 10px;
 		color: $color-primary-dark;
 		cursor: pointer;
-
+		@include resp(sm) {
+			margin-left: 5px;
+			margin-bottom: 5px;
+		}
 		&:hover {
 			font-weight: 700;
 		}
