--- a/styles/abstracts/_variables.scss
+++ b/styles/abstracts/_variables.scss
@@ -7,6 +7,10 @@ $color-primary: #2a3550;
 $color-primary-light: #01297080;
 $color-primary-dark: #03213d;
 
+$color-blue-dark-1: #35415e;
+$color-blue-dark-2: #014365;
+$color-blue-dark-3: #2b2e41;
+
 $color-grey-light-1: #faf9f9;
 $color-grey-light-2: #f4f2f2;
 $color-grey-light-3: #f0eeee;
