--- a/styles/main.scss
+++ b/styles/main.scss
@@ -12,3 +12,5 @@
 @import './components/layout';
 @import './components/components';
 @import './components/UI';
+
+@import './components/admin/admin';
