--- a/styles/components/_components.scss
+++ b/styles/components/_components.scss
@@ -155,13 +155,20 @@
 // Services section
 
 .services {
+	@include resp(lg) {
+		display: flex;
+	}
+
 	& .card {
 		margin-bottom: 30px;
+
 		@include resp(lg) {
 			min-width: 100%;
+			width: 250px;
 		}
 		@include resp(xsm) {
 			margin-bottom: 20px;
+			width: 150px;
 		}
 	}
 
